# Morphology

./: CMakeLists.txt  README.md  TODO.txt  execution_times.csv  ff.cu  how to run.txt  main.cu  output.png.ncu-rep  results.csv
include/: KernelsAndStructs.cuh  MorphologicalOperators.cu  MorphologicalOperators.h  ParallelMorphology.cu  ParallelMorphology.cuh  SequentialMorphology.h  Utility.h
my_build_vs_gen/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  cuda_hello.exp  cuda_hello.lib  results.csv
my_build_vs_gen/.cmake/api/v1/reply/: cache-v2-4821c229e75c9f10795f.json  cache-v2-6a49da4d9098001c4b1e.json  cmakeFiles-v1-b13c70cf09210839a6c3.json  cmakeFiles-v1-c392e3755e948592b28a.json  codemodel-v2-5c63d95fb5dc7b2abc63.json  codemodel-v2-973cd7f407aceaed5a6e.json  codemodel-v2-abc724e83b3dbbd19e77.json  codemodel-v2-b55ec7cd3968175791c1.json  codemodel-v2-c2f50ad5896623a5f9e3.json  index-2025-02-15T07-02-38-0041.json  index-2025-02-16T12-40-09-0546.json  index-2025-02-17T16-56-55-0786.json  index-2025-02-18T15-32-50-0214.json  index-2025-02-25T14-57-01-0263.json  index-2025-02-26T15-43-55-0073.json  index-2025-03-09T09-46-45-0480.json  target-cuda_hello-Release-112385eb4e5ce4a8fe2d.json  target-cuda_hello-Release-4d96e10ae418afb41e5d.json  target-cuda_hello-Release-76453f2d7794b10b7d20.json  target-cuda_hello-Release-7ecc8a0ac127ff329320.json  target-cuda_hello-Release-d6a5face3e9ef0072776.json  toolchains-v1-88888f3ec9a1eab28d61.json
